@@ -82,7 +82,7 @@
 			<zipfileset src="${src}/par64.zip" includes="libjp1parallel.so" prefix="Linux-amd64" filemode="755"/>
             <zipfileset src="${src}/jp12serial024.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/jp12serial024.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
-            <zipfileset src="${src}/jp1usb_dll_031.zip" includes="**/*.dll"/>
+            <zipfileset src="${src}/jp1usb_dll_04.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/libDecodeIR.so,**/libDecodeIR.jnilib" filemode="755"/>
 			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/DecodeIR.dll,DecodeIR.html,Docs/*.txt" filemode="555"/>
           	<zipfileset src="${src}/RdfAndImages.zip" includes="**/*" defaultexcludes="no"/>
